<resources>
    <string name="app_name" translatable="false">EmojiMixer</string>
    <string name="activity_hint_1">Swipe left or right to mix emojis</string>
    <string name="downloading">Downloading your cool mixed emoji&#8230;</string>
    <string name="swipe_left_or_right_to_mix_emojis">Swipe left or right to mix emojis</string>
    <string name="save_emoji">Save emoji</string>
    <string name="exporting">Exporting</string>
    <string name="saved">Successfully Saved</string>
    <string name="failed_to_save">Failed to Save</string>
    <string name="whatsapp_icon">Whatsapp icon</string>
    <string name="export_to_whatsapp">Export to WhatsApp</string>
    <string name="telegram_icon">Telegram icon</string>
    <string name="export_to_telegram">Export to Telegram</string>
    <string name="export_as_sticker">Export As Sticker</string>
    <string name="stickers">Stickers</string>
</resources>