<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp"
    android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/export_as_sticker"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#F7C02B"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/whatsappButton"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_whatsapp"
                    android:contentDescription="@string/whatsapp_icon" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_to_whatsapp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/telegramButton"
                android:paddingVertical="8dp"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_telegram_app"
                    android:contentDescription="@string/telegram_icon" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_to_telegram"
                    android:textSize="20sp" />
            </LinearLayout>
</LinearLayout>